@@ -6,11 +6,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import static berlin.yuna.survey.config.SurveyDefaults.surveyMapper;
 import static java.util.Arrays.stream;
 
+@SuppressWarnings({"unused", "UnusedReturnValue"})
 public class QuestionList extends FlowItem<Collection<String>, QuestionList> {
 
 
@@ -23,11 +23,11 @@ public class QuestionList extends FlowItem<Collection<String>, QuestionList> {
     private <T> Optional<Collection<T>> collectionOf(final Object object, final Class<T> type) {
         try {
             if (object != null && object.getClass().isArray()) {
-                return Optional.of(stream(((Object[]) object)).map(type::cast).collect(Collectors.toList()));
+                return Optional.of(stream(((Object[]) object)).map(type::cast).toList());
             } else if (object instanceof Collection) {
-                return Optional.of(((Collection<?>) object).stream().map(type::cast).collect(Collectors.toList()));
-            } else if (object instanceof String) {
-                return collectionOf(((String) object), type);
+                return Optional.of(((Collection<?>) object).stream().map(type::cast).toList());
+            } else if (object instanceof String str) {
+                return collectionOf(str, type);
             }
         } catch (Exception ignored) {
         }
@@ -35,7 +35,7 @@ public class QuestionList extends FlowItem<Collection<String>, QuestionList> {
     }
 
     private <T> Optional<Collection<T>> collectionOf(final String object, final Class<T> type) {
-        ObjectMapper mapper = surveyMapper();
+        final ObjectMapper mapper = surveyMapper();
         return mapper.convertValue(object, mapper.getTypeFactory().constructCollectionType(List.class, type));
     }
 
@@ -47,7 +47,7 @@ public class QuestionList extends FlowItem<Collection<String>, QuestionList> {
         return new QuestionList(label);
     }
 
-    private QuestionList(String label) {
+    private QuestionList(final String label) {
         super(label);
     }
 }
